exports[`Alert renders with color error 1`] = `
<div
  className="ax-alert ax-alert--error">
  <div
    className="ax-grid ax-grid--unresponsive ax-grid--gutters--small ax-grid--middle">
    <div
      className="ax-grid__cell"
      style={
        Object {
          "width": undefined,
        }
      }>
      Lorem ipsum
    </div>
  </div>
</div>
`;

exports[`Alert renders with color info 1`] = `
<div
  className="ax-alert ax-alert--info">
  <div
    className="ax-grid ax-grid--unresponsive ax-grid--gutters--small ax-grid--middle">
    <div
      className="ax-grid__cell"
      style={
        Object {
          "width": undefined,
        }
      }>
      Lorem ipsum
    </div>
  </div>
</div>
`;

exports[`Alert renders with color success 1`] = `
<div
  className="ax-alert ax-alert--success">
  <div
    className="ax-grid ax-grid--unresponsive ax-grid--gutters--small ax-grid--middle">
    <div
      className="ax-grid__cell"
      style={
        Object {
          "width": undefined,
        }
      }>
      Lorem ipsum
    </div>
  </div>
</div>
`;

exports[`Alert renders with color warning 1`] = `
<div
  className="ax-alert ax-alert--warning">
  <div
    className="ax-grid ax-grid--unresponsive ax-grid--gutters--small ax-grid--middle">
    <div
      className="ax-grid__cell"
      style={
        Object {
          "width": undefined,
        }
      }>
      Lorem ipsum
    </div>
  </div>
</div>
`;

exports[`Alert renders with defaultProps 1`] = `
<div
  className="ax-alert ax-alert--info">
  <div
    className="ax-grid ax-grid--unresponsive ax-grid--gutters--small ax-grid--middle">
    <div
      className="ax-grid__cell"
      style={
        Object {
          "width": undefined,
        }
      }>
      Lorem ipsum
    </div>
  </div>
</div>
`;

exports[`Alert renders with onRemoveClick 1`] = `
<div
  className="ax-alert ax-alert--info">
  <div
    className="ax-grid ax-grid--unresponsive ax-grid--gutters--small ax-grid--middle">
    <div
      className="ax-grid__cell"
      style={
        Object {
          "width": undefined,
        }
      }>
      Lorem ipsum
    </div>
    <div
      className="ax-grid__cell ax-grid__cell--shrink"
      style={
        Object {
          "width": undefined,
        }
      }>
      <a
        className="ax-icon-link ax-theme--dark"
        onClick={[Function]}>
        <svg
          className="ax-icon"
          style={
            Object {
              "height": "1rem",
              "width": "1rem",
            }
          }
          viewBox="0 0 16 16">
          <polygon
            points="9.5 8 13 4.5 11.5 3 8 6.5 4.5 3 3 4.5 6.5 8 3 11.5 4.5 13 8 9.5 11.5 13 13 11.5 9.5 8" />
        </svg>
      </a>
    </div>
  </div>
</div>
`;

exports[`Alert renders with withIcon 1`] = `
<div
  className="ax-alert ax-alert--info">
  <div
    className="ax-grid ax-grid--unresponsive ax-grid--gutters--small ax-grid--middle">
    <div
      className="ax-grid__cell ax-grid__cell--shrink"
      style={
        Object {
          "width": undefined,
        }
      }>
      <div
        className="ax-icon-indicator ax-icon-indicator--subtle ax-icon-indicator--small ax-theme--light">
        <svg
          className="ax-icon"
          style={
            Object {
              "height": "1rem",
              "width": "1rem",
            }
          }
          viewBox="0 0 16 16">
          <path
            d="M10.5,14 L5.5,14 L5.5,12.75 L6.75,12.75 L6.75,7 L5.5,7 L5.5,5.75 L9.25,5.75 L9.25,12.75 L10.5,12.75 L10.5,14 Z M9.375,3 C9.375,3.759 8.75777778,4.375 8,4.375 C7.24222222,4.375 6.625,3.759 6.625,3 C6.625,2.24222222 7.24222222,1.625 8,1.625 C8.75777778,1.625 9.375,2.24222222 9.375,3 Z" />
        </svg>
      </div>
    </div>
    <div
      className="ax-grid__cell"
      style={
        Object {
          "width": undefined,
        }
      }>
      Lorem ipsum
    </div>
  </div>
</div>
`;
